syntax = "proto3";

package auth;

message TransportContext {
  bool Encrypted = 1;
  string RemoteAddress = 2;
  repeated bytes X509CertificateChain = 4;
}

message ApplicationContext {
  bytes Username = 1;
  bytes Password = 2;
  bytes ClientID = 3;
}

message WaspAuthenticationRequest {
  ApplicationContext MQTT = 1;
  TransportContext Transport = 2;
}

message WaspAuthenticationResponse { string MountPoint = 1; string ID = 2; }

service Authentication {
  rpc AuthenticateMQTTClient(WaspAuthenticationRequest)
      returns (WaspAuthenticationResponse) {}
}
